Revert "fix(like-button): center text, jumping width"
This reverts commit 9f35ac964e135cbf2b08ae3b9cde1782f59e6f29.

--- a/src/pages/ui-kits-form/ui-kits-form.scss
+++ b/src/pages/ui-kits-form/ui-kits-form.scss
@@ -129,7 +129,7 @@
 
   &__like-button-item {
     &:nth-child(1) {
-      margin-right: 10px;
+      margin-right: 2px;
     }
   }
 
